<resources>
    <string name="app_name">Nu-Track</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="button">Button</string>
    <string name="today">Today</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="calories_remaining">Calories Remaining</string>
    <string name="minus_sign">-</string>
    <string name="equal_sign">=</string>
    <string name="goal">Goal</string>
    <string name="food">Food</string>
    <string name="remaining">Remaining</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_food">+ Add Food</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="calories_amount">Calories Amount</string>
    <string name="exercise">Exercise</string>
    <string name="add_exercise">+ Add Exercise</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="menu">Menu</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="date">Date</string>
    <string name="key">Key</string>
...
    <string name="barcode">Barcode</string>
    <string name="currentDate">currentDate</string>
    <string name="zero">0</string>
    <string name="please_fill_name_description_measurement">Please fill in the name, description and measurement</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="signing_out">Signing out.</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date_for_text_view">dd MMM</string>
    <string name="goals">Goals</string>
    <string name="empty_space"> </string>
    <string name="grams_short">g</string>
    <string name="zero_point_zero_grams">0.0g</string>
    <string name="cal">Cal</string>
...
    <string name="enter_your_weight_kg">Enter your weight (kg)</string>
    <string name="enter_weight">Enter weight</string>
    <string name="change_date">Change date</string>
    <string name="enter_calories">Enter calories</string>
    <string name="add_food_info">Add food info</string>
    <string name="scan">Scan</string>
    <string name="exercise_delete">Exercise delete</string>
    <string name="food_delete">Food delete</string>
    <string name="food_info">Food info</string>
    <string name="add_goals">Add goals</string>
    <string name="calories_delete">Calories delete</string>
    <string name="calories_info">Calories info</string>
    <string name="macros">Macros</string>
    <string name="log_out">Log out</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
...
