...
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lunchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lunchRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addFoodToLunchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
...
                android:gravity="center"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exerciseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:orientation="vertical">
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/exerciseRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/addExerciseTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_corner_alice_blue"
                android:paddingVertical="10dp"
...
