<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionExerciseDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/exercise_delete"
        android:onClick="exerciseDelete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionAddExercise"
        android:icon="@drawable/ic_check"
        android:title="@string/add_exercise"
        android:onClick="addExerciseNext"
        app:showAsAction="ifRoom" />

</menu>