<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionFoodDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/food_delete"
        android:onClick="foodDelete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionFoodInfoNext"
        android:icon="@drawable/ic_check"
        android:title="@string/food_info"
        android:onClick="foodInfoNext"
        app:showAsAction="ifRoom" />

</menu>
