<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_macronutrients"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/macros"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_weight"
        android:title="@string/weight"
...
